# bio-p2p-network

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/bio-node-cli/: README.md  cargo.toml
crates/bio-node-cli/src/: cli.rs  commands.rs  config.rs  daemon.rs  health.rs  main.rs  metrics.rs  node.rs  signals.rs
crates/bio-resource-mgr/examples/: basic_usage.rs
crates/bio-resource-mgr/src/: allocation.rs  compartments.rs  constants.rs  crisis.rs  errors.rs  havoc.rs  lib.rs  math.rs  metrics.rs  nodes.rs  social.rs  thermal.rs
crates/biosecurity/: README.md  cargo.toml
crates/biosecurity/src/: config.rs  crypto.rs  error.rs  framework.rs  lib.rs
crates/biosecurity/src/layers/: layer1_execution.rs  layer2_cbadu.rs  layer3_illusion.rs  layer4_behaviour.rs  layer5_thermal.rs  mod.rs
crates/biosecurity/src/node/: mod.rs
crates/biosecurity/tests/: integrations.rs
crates/core-protocol/: Cargo.toml
crates/core-protocol/src/: address.rs  biological.rs  error.rs  lib.rs  message.rs  package.rs  reputation.rs  security.rs
crates/node-cli/: Cargo.toml
crates/p2p-node/: Cargo.toml  README.md
crates/p2p-node/examples/: simple_node.rs  three_node_swarm.rs
crates/p2p-node/src/: behaviour.rs  config.rs  error.rs  lib.rs  network.rs  node.rs  protocol.rs
crates/p2p-node/src/biological/: address.rs  benchmarks.rs  coordination.rs  factory.rs  huddle.rs  learning.rs  migration.rs
crates/security/: Cargo.toml
crates/ui-desktop/: BUILD.md  Cargo.toml  tauri.config.json
crates/ui-desktop/src/: app.rs  commands.rs  config.rs  events.rs  main.rs  node.rs  state.rs
crates/ui-desktop/src/ui/: biological_panel.rs  biological_roles.rs  mod.rs  network_panel.rs  network_status.rs
docs/: SECURITY.md
