[workspace]
members = [
    "crates/core-protocol",
    "crates/p2p-node", 
    "crates/security",
    "crates/resource-mgr",
    "crates/node-cli",
    "crates/ui-desktop",
]
exclude = ["target"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Bio-P2P Network Team <team@bio-p2p.org>"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bio-p2p/network"
homepage = "https://bio-p2p.org"
description = "Biologically-inspired P2P compute sharing network"
keywords = ["p2p", "distributed", "biological", "computing", "network"]
categories = ["network-programming", "science", "algorithms"]

[workspace.dependencies]
# Core dependencies with pinned versions for security
tokio = { version = "=1.35.1", features = ["full"] }
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
libp2p = { version = "=0.53.2", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }
blake3 = "=1.5.0"
ed25519-dalek = { version = "=2.0.0", features = ["rand_core"] }
x25519-dalek = "=2.0.0"
chacha20poly1305 = "=0.10.1"
rand = "=0.8.5"
uuid = { version = "=1.6.1", features = ["v4"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "json"] }
anyhow = "=1.0.77"
thiserror = "=1.0.50"
clap = { version = "=4.4.11", features = ["derive", "env"] }
config = "=0.13.4"
dashmap = "=5.5.3"

# GUI dependencies
tauri = { version = "=1.5.4", features = ["api-all"] }
egui = "=0.24.1"
eframe = { version = "=0.24.1", default-features = false, features = ["default_fonts", "glow"] }

# Development dependencies
criterion = { version = "=0.5.1", features = ["html_reports"] }
proptest = "=1.4.0"
tokio-test = "=0.4.3"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

# Workspace-wide linting configuration
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Specific security-focused lints
panic = "forbid"
unwrap_used = "forbid"
expect_used = "warn"
indexing_slicing = "warn"
integer_arithmetic = "warn"
float_arithmetic = "warn"
[package]
name = "bio-p2p-workspace"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core-protocol",
    "p2p-node",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies for all workspace members
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Allow some clippy lints that are too restrictive for this project
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"