[package]
name = "core-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol definitions and message types for bio-p2p network"
keywords = ["protocol", "messages", "serialization", "p2p"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "serialization"
harness = false

[lints]
workspace = true
