[package]
name = "node-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI daemon for bio-p2p network node"
keywords = ["cli", "daemon", "node", "p2p"]

[[bin]]
name = "bio-p2p-node"
path = "src/main.rs"

[dependencies]
core-protocol = { path = "../core-protocol" }
p2p-node = { path = "../p2p-node" }
security = { path = "../security" }
resource-mgr = { path = "../resource-mgr" }
tokio.workspace = true
clap.workspace = true
config.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
