[package]
name = "security"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "5-layer security system for bio-p2p network"
keywords = ["security", "cryptography", "monitoring", "defense"]

[dependencies]
core-protocol = { path = "../core-protocol" }
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
